# TDArray

./: Cargo.toml
check_macro/: Cargo.toml
check_macro/src/: lib.rs
proc_macro/src/: lib.rs  string_funcs.rs
src/: array.rs  array_iterator.rs  const_funcs.rs  constructors.rs  indexer.rs  lib.rs  maths.rs
