[package]
name = "TDArray"
version = "0.1.0"
edition = "2021"

[dependencies]
num-traits = "0.2.19"
const_panic = "0.2.9"
const_format = {version = "0.2.33", features = ["assertc"] }
check_macro = {path = 'check_macro'}
proc_macro = {path = 'proc_macro' }
regex = "1.5.4"
paste = "1.0.15"
eager = "0.1.0"